--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 boto3 == 1.17.16
 flask == 1.1.2
-flask_restful == 0.3.8
+flask-restplus == 0.13.0
+requests === 2.25.1
+flask-ngrok === 0.0.25
+flask-swagger-ui === 3.36.0
+Werkzeug === 0.16.1
