--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 boto3 == 1.17.16
 flask == 1.1.2
-flask-restplus == 0.13.0
+flask-restx === 0.2.0
 requests === 2.25.1
 flask-ngrok === 0.0.25
 flask-swagger-ui === 3.36.0
-Werkzeug === 0.16.1
+Werkzeug === 1.0.1
